fixed about-btn no dowload function

--- a/index.html
+++ b/index.html
@@ -130,7 +130,12 @@
 								<div class="col-6 info-block">
 									<p>Email: <span>anthonykarlo.bantugan@gmail.com</span></p>
 								</div>
-								<button class="col-3 ms-auto me-auto main-btn about-btn btn-hover mt-3 " type="button">Download CV</button>
+                                <!-- <button class=" main-btn btn-hover" type="button">
+                                    <a href="./SAMPLE CV.pdf" download="sample-cv">Download CV</a>
+                                </button> -->
+								<button class="col-3 ms-auto me-auto main-btn about-btn btn-hover mt-3 " type="button">
+                                    <a href="./SAMPLE CV.pdf" download="sample-CV">Download CV</a>
+                                </button>
 								<p class="custom-border-line"></p>
 								<div class="skills d-sm-flex flex-sm-column">
 									<div class="main-title">
