Fixed navbar responsiveness and initial code fix for home section

--- a/index.html
+++ b/index.html
@@ -20,16 +20,35 @@
 <body>
 	
 	<!-- NAVBAR START -->
-	<nav class="navbar navbar-expand-md justify-content-md-around fixed-top">
-		<!-- <div class="container"> -->
+	<!-- <nav class="navbar navbar-expand-md justify-content-md-around fixed-top">
+			<div class="container"> -->
 			<!-- <div class="navbar-header"> -->
-				<a class="navbar-brand" href="#home">
+				<!-- <a class="navbar-brand" href="#home">
 					<span>A</span>nthony
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 					<i class="fas fa-bars"></i>
-				</button>
+				</button> -->
 			<!-- </div> -->
+			<!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+				<div class="navbar-nav ms-auto">
+					<a class="nav-link " href="#home">home</a>
+					<a class="nav-link" href="#about">About</a>
+					<a class="nav-link" href="#projects">Projects</a>
+					<a class="nav-link" href="#contacts">Contact</a>
+				</div>
+			</div> -->
+		<!-- </div> --> -->
+	<!-- </nav> -->
+
+		<!--Version 2  -->
+		<nav class="navbar navbar-expand-md fixed-top">
+			<a class="navbar-brand" href="#home">
+				<span>A</span>nthony
+			</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
+				<i class="fas fa-bars"></i>
+			</button>
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<div class="navbar-nav ms-auto">
 					<a class="nav-link " href="#home">home</a>
@@ -38,13 +57,29 @@
 					<a class="nav-link" href="#contacts">Contact</a>
 				</div>
 			</div>
-		<!-- </div> -->
+		</nav>
+
 		
-	</nav>
-	<!-- NAVBAR END -->
 	
+	<!-- NAVBAR END -->
+		<section id="home">
+			<div class="overlay">
+				<div class="container">
+					<h1>Anthony Karlo</h1>
+					<p>I'm a <span>Full Stack <span class="red">Web</span> Developer</span></p>
+					<div class="home-btn">
+						<button class=" main-btn custom-btn" type="button">
+								<a href="#contacts">Hire Me</a>
+						</button>
+						<button class=" main-btn btn-hover" type="button">
+								<a href="./SAMPLE CV.pdf" download="sample-cv">Download CV</a>
+						</button>
+					</div>
+				</div>
+			</div>
+		</section>
 	<!-- HOME SECTION -->
-	<section id="home">
+	<!-- <section id="home">
 		<div class="overlay">
 			<div class="container">
 				<div class="intro display-table">
@@ -90,7 +125,9 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
+
+
 	<!-- END HOME -->
 	
 	<!-- ABOUT ME START -->
