revert old code

--- a/index.html
+++ b/index.html
@@ -62,24 +62,27 @@
 		
 	
 	<!-- NAVBAR END -->
-		<section id="home">
+		<!-- <section id="home">
 			<div class="overlay">
 				<div class="container">
-					<h1>Anthony Karlo</h1>
-					<p>I'm a <span>Full Stack <span class="red">Web</span> Developer</span></p>
-					<div class="home-btn">
-						<button class=" main-btn custom-btn" type="button">
-								<a href="#contacts">Hire Me</a>
-						</button>
-						<button class=" main-btn btn-hover" type="button">
-								<a href="./SAMPLE CV.pdf" download="sample-cv">Download CV</a>
-						</button>
+					<div class="intro">
+						<h1>Anthony Karlo</h1>
+						<p>I'm a <span>Full Stack <span class="red">Web</span> Developer</span></p>
+						<div class="home-btn">
+							<button class=" main-btn custom-btn" type="button">
+									<a href="#contacts">Hire Me</a>
+							</button>
+							<button class=" main-btn btn-hover" type="button">
+									<a href="./SAMPLE CV.pdf" download="sample-cv">Download CV</a>
+							</button>
+						</div>
 					</div>
+					
 				</div>
 			</div>
-		</section>
+		</section> -->
 	<!-- HOME SECTION -->
-	<!-- <section id="home">
+	<section id="home">
 		<div class="overlay">
 			<div class="container">
 				<div class="intro display-table">
@@ -125,7 +128,7 @@
 				</div>
 			</div>
 		</div>
-	</section> -->
+	</section>
 
 
 	<!-- END HOME -->
