added responsiveness to home page

--- a/index.html
+++ b/index.html
@@ -20,28 +20,6 @@
 <body>
 	
 	<!-- NAVBAR START -->
-	<!-- <nav class="navbar navbar-expand-md justify-content-md-around fixed-top">
-			<div class="container"> -->
-			<!-- <div class="navbar-header"> -->
-				<!-- <a class="navbar-brand" href="#home">
-					<span>A</span>nthony
-				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-					<i class="fas fa-bars"></i>
-				</button> -->
-			<!-- </div> -->
-			<!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-				<div class="navbar-nav ms-auto">
-					<a class="nav-link " href="#home">home</a>
-					<a class="nav-link" href="#about">About</a>
-					<a class="nav-link" href="#projects">Projects</a>
-					<a class="nav-link" href="#contacts">Contact</a>
-				</div>
-			</div> -->
-		<!-- </div> --> -->
-	<!-- </nav> -->
-
-		<!--Version 2  -->
 		<nav class="navbar navbar-expand-md fixed-top">
 			<a class="navbar-brand" href="#home">
 				<span>A</span>nthony
@@ -58,29 +36,8 @@
 				</div>
 			</div>
 		</nav>
-
+    <!-- NAVBAR END -->
 		
-	
-	<!-- NAVBAR END -->
-		<!-- <section id="home">
-			<div class="overlay">
-				<div class="container">
-					<div class="intro">
-						<h1>Anthony Karlo</h1>
-						<p>I'm a <span>Full Stack <span class="red">Web</span> Developer</span></p>
-						<div class="home-btn">
-							<button class=" main-btn custom-btn" type="button">
-									<a href="#contacts">Hire Me</a>
-							</button>
-							<button class=" main-btn btn-hover" type="button">
-									<a href="./SAMPLE CV.pdf" download="sample-cv">Download CV</a>
-							</button>
-						</div>
-					</div>
-					
-				</div>
-			</div>
-		</section> -->
 	<!-- HOME SECTION -->
 	<section id="home">
 		<div class="overlay">
@@ -96,6 +53,33 @@
 							<button class=" main-btn btn-hover" type="button">
 								<a href="./SAMPLE CV.pdf" download="sample-cv">Download CV</a>
 							</button>
+                            <ul class="socials-2">
+                                <li>
+                                    <a href="https://www.facebook.com/" target="_blank">
+                                        <i class="fab fa-facebook"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/" target="_blank">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linkedin.com/login" target="_blank">
+                                        <i class="fab fa-linkedin"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://about.gitlab.com/" target="_blank">
+                                        <i class="fab fa-gitlab"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://github.com/" target="_blank">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                </li>
+                            </ul>
 						</div>
 					</div>
 					<ul class="socials">
