done with about me responsiveness

--- a/index.html
+++ b/index.html
@@ -121,46 +121,46 @@
 	<section id="about">
 		<div class="container">
 			<div class="row">
-				<div class=" col-md-5 col-lg-5 align-self-stretch">
-					<div class="about-image mt-4">
+				<div class=" col-lg">
+					<div class="about-image text-center">
 						<img src="./img/about-image.jpeg" class="img-fluid" alt="">
 					</div>
 				</div>
-				<div class="col-md-7 col-lg-7">
+				<div class="col-lg">
 					<div class="about-info">
 						<div class="main-title">
-							<h2 class="mt-sm-4">About Me</h2>
+							<h2 class="mt-4 mt-lg-0 text-center">About Me</h2>
 						</div>
-						<h3>I am Anthony Karlo Bantugan</h3>
-						<h5>I am a Full Stack Web Developer</h5>
-						<p class="pb-3 text-xs-center">I am a freelancer based in the Philippines, and I am very passionate and dedicated to my work. I have acquired the skills necessary to build great and premium websites thru building projects and study.</p>
+						<h3 class="text-center">I am Anthony Karlo Bantugan</h3>
+						<h5 class="text-center">I am a Full Stack Web Developer</h5>
+						<p class="pb-3 text-center">I am a freelancer based in the Philippines, and I am very passionate and dedicated to my work. I have acquired the skills necessary to build great and premium websites thru building projects and study.</p>
 						<div class="personal-info">
 							<div class="row">
-								<div class="col-6 info-block">
+								<div class="text-center text-sm-start col-sm-6 info-block">
 									<p>Name: <span>Anthony Karlo Bantugan</span></p>
 								</div>
-								<div class="col-6 info-block">
+								<div class="text-center text-sm-start col-sm-6 info-block ps-0">
 									<p>Age: <span>30</span></p>
 								</div>
-								<div class="col-6 info-block">
+								<div class="text-center text-sm-start col-sm-6 info-block">
 									<p>Skype: <span>+1 234 567-8900</span></p>
 								</div>
-								<div class="col-6 info-block">
+								<div class="text-center text-sm-start col-sm-6 info-block ps-0">
 									<p>Address: <span>Davao City, Philippines</span></p>
 								</div>
-								<div class="col-6 info-block">
+								<div class="text-center text-sm-start col-sm-6 info-block">
 									<p>Website: <span>anthonysample.com</span></p>
 								</div>
-								<div class="col-6 info-block">
+								<div class="text-center text-sm-start col-sm-6 info-block ps-0">
 									<p>Email: <span>anthonykarlo.bantugan@gmail.com</span></p>
 								</div>
                                 <!-- <button class=" main-btn btn-hover" type="button">
                                     <a href="./SAMPLE CV.pdf" download="sample-cv">Download CV</a>
                                 </button> -->
-								<button class="col-3 ms-auto me-auto main-btn about-btn btn-hover mt-3 " type="button">
+								<button class="main-btn about-btn btn-hover" type="button">
                                     <a href="./SAMPLE CV.pdf" download="sample-CV">Download CV</a>
                                 </button>
-								<p class="custom-border-line"></p>
+								<!-- <p class="custom-border-line"></p>
 								<div class="skills d-sm-flex flex-sm-column">
 									<div class="main-title">
 										<h2 class="text-sm-center">Skills</h2>
@@ -179,7 +179,7 @@
 											<img src="./img/logo-git.png" alt="">
 										</div>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
