initial save for PROJECTS section

--- a/index.html
+++ b/index.html
@@ -127,37 +127,34 @@
 					</div>
 				</div>
 				<div class="col-lg">
-					<div class="about-info">
-						<div class="main-title">
-							<h2 class="mt-4 mt-lg-0 text-center">About Me</h2>
+					<div class="about-info text-center">
+						<div class="main-title mt-4 mt-lg-0">
+							<h2 class="">About Me</h2>
 						</div>
-						<h3 class="text-center">I am Anthony Karlo Bantugan</h3>
-						<h5 class="text-center">I am a Full Stack Web Developer</h5>
-						<p class="pb-3 text-center">I am a freelancer based in the Philippines, and I am very passionate and dedicated to my work. I have acquired the skills necessary to build great and premium websites thru building projects and study.</p>
+						<h3 class="">I am Anthony Karlo Bantugan</h3>
+						<h5 class="">Full Stack Web Developer</h5>
+						<p class="pb-3 ">A freelancer based in the Philippines, and I am very passionate and dedicated to my work. I have acquired the skills necessary to build great and premium websites thru building projects and study.</p>
 						<div class="personal-info">
 							<div class="row">
 								<div class="text-center text-sm-start col-sm-6 info-block">
 									<p>Name: <span>Anthony Karlo Bantugan</span></p>
 								</div>
-								<div class="text-center text-sm-start col-sm-6 info-block ps-0">
+								<div class="text-center text-sm-start col-sm-6 info-block p-0">
 									<p>Age: <span>30</span></p>
 								</div>
 								<div class="text-center text-sm-start col-sm-6 info-block">
 									<p>Skype: <span>+1 234 567-8900</span></p>
 								</div>
-								<div class="text-center text-sm-start col-sm-6 info-block ps-0">
+								<div class="text-center text-sm-start col-sm-6 info-block p-0">
 									<p>Address: <span>Davao City, Philippines</span></p>
 								</div>
 								<div class="text-center text-sm-start col-sm-6 info-block">
 									<p>Website: <span>anthonysample.com</span></p>
 								</div>
-								<div class="text-center text-sm-start col-sm-6 info-block ps-0">
+								<div class="text-center text-sm-start col-sm-6 info-block p-0">
 									<p>Email: <span>anthonykarlo.bantugan@gmail.com</span></p>
 								</div>
-                                <!-- <button class=" main-btn btn-hover" type="button">
-                                    <a href="./SAMPLE CV.pdf" download="sample-cv">Download CV</a>
-                                </button> -->
-								<button class="main-btn about-btn btn-hover" type="button">
+								<button class="main-btn about-btn btn-hover mt-2" type="button">
                                     <a href="./SAMPLE CV.pdf" download="sample-CV">Download CV</a>
                                 </button>
 								<!-- <p class="custom-border-line"></p>
@@ -191,14 +188,14 @@
 	
 	<!-- PROJECTS START -->
 	<section id="projects">
-		<div class="container">
-			<div class="main-title">
-				<h2 class="">My Projects</h2>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col-md-auto text-md-center">
-					<div class="card shadow-lg mb-3 p-3 text-white rounded" style="width: 18rem;">
-						<img src="./img/blog.webp" class="card-img-top" alt="...">
+		<div class="container text-center">
+            <div class="main-title custom-main-title">
+                <h2 class="">Projects</h2>
+            </div>
+			<div class="row row-cols-md-3 row-cols-1 g-2">
+				<div class="col text-center">
+					<div class="card h-100 p-2 text-white rounded" style="width: 18rem;">
+						<img src="./img/blog.webp" class="card-img-top " alt="...">
 						<div class="card-body">
 							<h5 class="card-title">Innocent Drink</h5>
 							<p class="card-text">Fully responsive website for a beverage company.</p>
@@ -223,8 +220,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-auto text-md-center">
-					<div class="card shadow-lg mb-3 p-3 text-white rounded" style="width: 18rem;">
+				<div class="col text-center">
+					<div class="card h-100 p-2 text-white rounded" style="width: 18rem;">
 						<img src="./img/time-tracker.png" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">Toggl Time Tracker</h5>
@@ -250,8 +247,8 @@
 						</div>
 					</div>
 				</div>	
-				<div class="col-md-auto text-md-center">
-					<div class="card shadow-lg mb-3 p-3 text-white rounded" style="width: 18rem;">
+				<div class="col text-center">
+					<div class="card h-100 p-2 text-white rounded" style="width: 18rem;">
 						<img src="./img/todo.jpeg" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">Simple To-do List</h5>
@@ -275,15 +272,97 @@
 							</div>
 						</div>
 					</div>
-				</div>		
-		</div>			
+				</div>
+                <div class="col text-center">
+					<div class="card h-100 p-2 text-white rounded" style="width: 18rem;">
+						<img src="./img/blog.webp" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title">Innocent Drink</h5>
+							<p class="card-text">Fully responsive website for a beverage company.</p>
+							<div class="d-flex flex-row justify-content-center tech">
+								<img src="./img/logo-html5.png" alt="">
+								<img src="./img/logo-css3.png" alt="">
+								<img src="./img/logo-javascript.png" alt="">
+								<img src="./img/logo-bootstrap.png" alt="">
+							</div>
+							<div class="d-flex flex-row justify-content-around">
+								<button class="projects-btn" type="button">
+									<a href="https://www.innocentdrinks.co.uk/blog" class="" target="_blank">
+										<i class="fas fa-link pe-2 ps-2"></i>
+									</a>
+								</button>
+								<button class="projects-btn" type="button">
+									<a href="www.github.com" class="" target="_blank">
+										<i class="fab fa-github"></i>
+									</a>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+                <div class="col text-center">
+					<div class="card h-100 p-2 text-white rounded" style="width: 18rem;">
+						<img src="./img/blog.webp" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title">Innocent Drink</h5>
+							<p class="card-text">Fully responsive website for a beverage company.</p>
+							<div class="d-flex flex-row justify-content-center tech">
+								<img src="./img/logo-html5.png" alt="">
+								<img src="./img/logo-css3.png" alt="">
+								<img src="./img/logo-javascript.png" alt="">
+								<img src="./img/logo-bootstrap.png" alt="">
+							</div>
+							<div class="d-flex flex-row justify-content-around">
+								<button class="projects-btn" type="button">
+									<a href="https://www.innocentdrinks.co.uk/blog" class="" target="_blank">
+										<i class="fas fa-link pe-2 ps-2"></i>
+									</a>
+								</button>
+								<button class="projects-btn" type="button">
+									<a href="www.github.com" class="" target="_blank">
+										<i class="fab fa-github"></i>
+									</a>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+                <div class="col text-center">
+					<div class="card h-100 p-2 text-white rounded" style="width: 18rem;">
+						<img src="./img/blog.webp" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title">Innocent Drink</h5>
+							<p class="card-text">Fully responsive website for a beverage company.</p>
+							<div class="d-flex flex-row justify-content-center tech">
+								<img src="./img/logo-html5.png" alt="">
+								<img src="./img/logo-css3.png" alt="">
+								<img src="./img/logo-javascript.png" alt="">
+								<img src="./img/logo-bootstrap.png" alt="">
+							</div>
+							<div class="d-flex flex-row justify-content-around">
+								<button class="projects-btn" type="button">
+									<a href="https://www.innocentdrinks.co.uk/blog" class="" target="_blank">
+										<i class="fas fa-link pe-2 ps-2"></i>
+									</a>
+								</button>
+								<button class="projects-btn" type="button">
+									<a href="www.github.com" class="" target="_blank">
+										<i class="fab fa-github"></i>
+									</a>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+            </div>	
+        </div>		
 	</section>
 	<!-- PROJECTS SECTION END -->
 	<!-- CONTACT ME SECTION START -->
 	<section id="contacts">
-		<div class="container">
-			<div class="main-title">
-				<h2 class="">Contact me</h2>
+		<div class="container text-center">
+			<div class="main-title custom-main-title">
+				<h2 class="">Contact</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-sm-12 mb-sm-3">
