--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
             <div class="main-title custom-main-title">
                 <h2 class="">Projects</h2>
             </div>
-			<div class="row row-cols-md-3 row-cols-1 g-2">
+			<div class="row row-cols-sm-2 row-cols-lg-3 row-cols-1 g-2">
 				<div class="col text-center">
-					<div class="card h-100 p-2 text-white rounded" style="width: 18rem;">
+					<div class="card h-100 p-2 text-white rounded">
 						<img src="./img/blog.webp" class="card-img-top " alt="...">
 						<div class="card-body">
 							<h5 class="card-title">Innocent Drink</h5>
@@ -221,7 +221,7 @@
 					</div>
 				</div>
 				<div class="col text-center">
-					<div class="card h-100 p-2 text-white rounded" style="width: 18rem;">
+					<div class="card h-100 p-2 text-white rounded">
 						<img src="./img/time-tracker.png" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">Toggl Time Tracker</h5>
@@ -248,7 +248,7 @@
 					</div>
 				</div>	
 				<div class="col text-center">
-					<div class="card h-100 p-2 text-white rounded" style="width: 18rem;">
+					<div class="card h-100 p-2 text-white rounded">
 						<img src="./img/todo.jpeg" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">Simple To-do List</h5>
@@ -274,7 +274,7 @@
 					</div>
 				</div>
                 <div class="col text-center">
-					<div class="card h-100 p-2 text-white rounded" style="width: 18rem;">
+					<div class="card h-100 p-2 text-white rounded">
 						<img src="./img/blog.webp" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">Innocent Drink</h5>
@@ -301,7 +301,7 @@
 					</div>
 				</div>
                 <div class="col text-center">
-					<div class="card h-100 p-2 text-white rounded" style="width: 18rem;">
+					<div class="card h-100 p-2 text-white rounded">
 						<img src="./img/blog.webp" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">Innocent Drink</h5>
@@ -328,7 +328,7 @@
 					</div>
 				</div>
                 <div class="col text-center">
-					<div class="card h-100 p-2 text-white rounded" style="width: 18rem;">
+					<div class="card h-100 p-2 text-white rounded">
 						<img src="./img/blog.webp" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">Innocent Drink</h5>
