done with portfolio responsiveness

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 	
 </head>
 <body>
-	
 	<!-- NAVBAR START -->
 		<nav class="navbar navbar-expand-md fixed-top">
 			<a class="navbar-brand" href="#home">
@@ -113,9 +112,7 @@
 			</div>
 		</div>
 	</section>
-
-
-	<!-- END HOME -->
+<!-- END HOME -->
 	
 	<!-- ABOUT ME START -->
 	<section id="about">
@@ -358,14 +355,15 @@
         </div>		
 	</section>
 	<!-- PROJECTS SECTION END -->
+
 	<!-- CONTACT ME SECTION START -->
 	<section id="contacts">
 		<div class="container text-center">
 			<div class="main-title custom-main-title">
 				<h2 class="">Contact</h2>
 			</div>
-			<div class="row">
-				<div class="col-md-4 col-sm-12 mb-sm-3">
+			<div class="row row-cols-md-2">
+				<div class="col h-100">
 					<div class="contact-boxes">
 						<div class="contact-box">
 							<span class="icon-box">
@@ -411,7 +409,7 @@
 					</div>
 				</div>
 				
-				<div class="col-md-8 col-sm-12">
+				<div class="col h-100">
 					<form action="mail.php" method="post" class="contact-form">
 						<div class="form-group">
 							<input type="text" id="name" name="name" placeholder="Name" required class="form-control">
@@ -434,13 +432,14 @@
 				</div>
 			</div>
 		</div>
+	</section>
 
-		<!-- FOOTER SECTION START -->
-		<footer>
-			<div class="container">
-				<div class="row text-white">
-					<div class="col">
-						<ul class="socials-footer d-flex justify-content-center align-items-center mt-3">
+	<!-- FOOTER SECTION START -->
+	<footer>
+			<div class="container-fluid p-4">
+				<div class="d-flex flex-column flex-md-row justify-content-md-around ">
+					<div class="">
+						<ul class="socials-footer p-0 d-flex justify-content-center align-items-center">
 							<li>
 								<a href="https://www.facebook.com/" target="_blank">
 									<i class="fab fa-facebook"></i>
@@ -468,18 +467,17 @@
 							</li>
 						</ul>
 					</div>
-					<div class="col">
-						<p class="p-width text-center">"Push harder then yesterday if you want a different tomorrow." -Google</p>
-
+					<div class="text-white">
+						<p class="p-width text-center">Disclaimer: Used for educational purposes only</p>
 					</div>
-					<div class="col back-top">
+					<!-- <div class="text-center back-top">
 						<a href="#home">
 							<i class="fas fa-arrow-circle-up"></i>Back to top
 						</a>
-					</div>
+					</div> -->
 				</div>
 			</div>
-		</footer>
+	</footer>
 
 
 
