--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			</div>
 		</div>
 	</section>
-<!-- END HOME -->
+	<!-- END HOME -->
 	
 	<!-- ABOUT ME START -->
 	<section id="about">
@@ -364,8 +364,8 @@
 			</div>
 			<div class="row row-cols-md-2">
 				<div class="col h-100">
-					<div class="contact-boxes">
-						<div class="contact-box">
+					<div class="contact-box">
+						<div class="contact-boxes">
 							<span class="icon-box">
 								<i class="fa fa-map-marker-alt"></i>
 							</span>
@@ -376,34 +376,31 @@
 							</div>
 						</div>
 
-						<div class="contact-box">
+						<div class="contact-boxes">
 							<span class="icon-box">
 								<i class="fa fa-envelope"></i>
 							</span>
 							<h4 class="title-box">Email</h4>
 							<div class="content-box">
-								<p>Support@example.com</p>
-								<p>Support@example.com</p>
+								<p class="custom-p">anthonykarlo.bantugan@gmail.com</p>				
 							</div>
 						</div>
-
-						<div class="contact-box">
+						<div class="contact-boxes">
 							<span class="icon-box">
 								<i class="fa fa-phone"></i>
 							</span>
-							<h4 class="title-box">Phone</h4>
+							<h4 class="title-box">Skype</h4>
 							<div class="content-box">
-								<p>+1 234 567-8900</p>
 								<p>+1 234 567-8900</p>
 							</div>
 						</div>
-						<div class="contact-box">
+						<div class="contact-boxes">
 							<span class="icon-box">
 								<i class="fa fa-globe"></i>
 							</span>
 							<h4 class="title-box">Website</h4>
-							<div class="content-box">
-								<p>anthonysample.com</p>
+							<div class="content-box">		
+								<a href="https://anthonykarlobantugan.github.io/webportfolio/" class="site-link">Go to Website</a>
 							</div>
 						</div>
 					</div>
