--- a/index.html
+++ b/index.html
@@ -18,30 +18,7 @@
 	
 </head>
 <body>
-	
 	<!-- NAVBAR START -->
-	<!-- <nav class="navbar navbar-expand-md justify-content-md-around fixed-top">
-			<div class="container"> -->
-			<!-- <div class="navbar-header"> -->
-				<!-- <a class="navbar-brand" href="#home">
-					<span>A</span>nthony
-				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-					<i class="fas fa-bars"></i>
-				</button> -->
-			<!-- </div> -->
-			<!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-				<div class="navbar-nav ms-auto">
-					<a class="nav-link " href="#home">home</a>
-					<a class="nav-link" href="#about">About</a>
-					<a class="nav-link" href="#projects">Projects</a>
-					<a class="nav-link" href="#contacts">Contact</a>
-				</div>
-			</div> -->
-		<!-- </div> --> -->
-	<!-- </nav> -->
-
-		<!--Version 2  -->
 		<nav class="navbar navbar-expand-md fixed-top">
 			<a class="navbar-brand" href="#home">
 				<span>A</span>nthony
@@ -58,29 +35,8 @@
 				</div>
 			</div>
 		</nav>
-
+    <!-- NAVBAR END -->
 		
-	
-	<!-- NAVBAR END -->
-		<!-- <section id="home">
-			<div class="overlay">
-				<div class="container">
-					<div class="intro">
-						<h1>Anthony Karlo</h1>
-						<p>I'm a <span>Full Stack <span class="red">Web</span> Developer</span></p>
-						<div class="home-btn">
-							<button class=" main-btn custom-btn" type="button">
-									<a href="#contacts">Hire Me</a>
-							</button>
-							<button class=" main-btn btn-hover" type="button">
-									<a href="./SAMPLE CV.pdf" download="sample-cv">Download CV</a>
-							</button>
-						</div>
-					</div>
-					
-				</div>
-			</div>
-		</section> -->
 	<!-- HOME SECTION -->
 	<section id="home">
 		<div class="overlay">
@@ -96,6 +52,33 @@
 							<button class=" main-btn btn-hover" type="button">
 								<a href="./SAMPLE CV.pdf" download="sample-cv">Download CV</a>
 							</button>
+                            <ul class="socials-2">
+                                <li>
+                                    <a href="https://www.facebook.com/" target="_blank">
+                                        <i class="fab fa-facebook"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/" target="_blank">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linkedin.com/login" target="_blank">
+                                        <i class="fab fa-linkedin"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://about.gitlab.com/" target="_blank">
+                                        <i class="fab fa-gitlab"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://github.com/" target="_blank">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                </li>
+                            </ul>
 						</div>
 					</div>
 					<ul class="socials">
@@ -129,54 +112,49 @@
 			</div>
 		</div>
 	</section>
-
-
 	<!-- END HOME -->
 	
 	<!-- ABOUT ME START -->
 	<section id="about">
 		<div class="container">
 			<div class="row">
-				<div class=" col-md-5 col-lg-5 align-self-stretch">
-					<div class="about-image mt-4">
+				<div class=" col-lg">
+					<div class="about-image text-center">
 						<img src="./img/about-image.jpeg" class="img-fluid" alt="">
 					</div>
 				</div>
-				<div class="col-md-7 col-lg-7">
-					<div class="about-info">
-						<div class="main-title">
-							<h2 class="mt-sm-4">About Me</h2>
+				<div class="col-lg">
+					<div class="about-info text-center">
+						<div class="main-title mt-4 mt-lg-0">
+							<h2 class="">About Me</h2>
 						</div>
-						<h3>I am Anthony Karlo Bantugan</h3>
-						<h5>I am a Full Stack Web Developer</h5>
-						<p class="pb-3 text-xs-center">I am a freelancer based in the Philippines, and I am very passionate and dedicated to my work. I have acquired the skills necessary to build great and premium websites thru building projects and study.</p>
+						<h3 class="">I am Anthony Karlo Bantugan</h3>
+						<h5 class="">Full Stack Web Developer</h5>
+						<p class="pb-3 ">A freelancer based in the Philippines, and I am very passionate and dedicated to my work. I have acquired the skills necessary to build great and premium websites thru building projects and study.</p>
 						<div class="personal-info">
 							<div class="row">
-								<div class="col-6 info-block">
+								<div class="text-center text-sm-start col-sm-6 info-block">
 									<p>Name: <span>Anthony Karlo Bantugan</span></p>
 								</div>
-								<div class="col-6 info-block">
+								<div class="text-center text-sm-start col-sm-6 info-block p-0">
 									<p>Age: <span>30</span></p>
 								</div>
-								<div class="col-6 info-block">
+								<div class="text-center text-sm-start col-sm-6 info-block">
 									<p>Skype: <span>+1 234 567-8900</span></p>
 								</div>
-								<div class="col-6 info-block">
+								<div class="text-center text-sm-start col-sm-6 info-block p-0">
 									<p>Address: <span>Davao City, Philippines</span></p>
 								</div>
-								<div class="col-6 info-block">
+								<div class="text-center text-sm-start col-sm-6 info-block">
 									<p>Website: <span>anthonysample.com</span></p>
 								</div>
-								<div class="col-6 info-block">
+								<div class="text-center text-sm-start col-sm-6 info-block p-0">
 									<p>Email: <span>anthonykarlo.bantugan@gmail.com</span></p>
 								</div>
-                                <!-- <button class=" main-btn btn-hover" type="button">
-                                    <a href="./SAMPLE CV.pdf" download="sample-cv">Download CV</a>
-                                </button> -->
-								<button class="col-3 ms-auto me-auto main-btn about-btn btn-hover mt-3 " type="button">
+								<button class="main-btn about-btn btn-hover mt-2" type="button">
                                     <a href="./SAMPLE CV.pdf" download="sample-CV">Download CV</a>
                                 </button>
-								<p class="custom-border-line"></p>
+								<!-- <p class="custom-border-line"></p>
 								<div class="skills d-sm-flex flex-sm-column">
 									<div class="main-title">
 										<h2 class="text-sm-center">Skills</h2>
@@ -195,7 +173,7 @@
 											<img src="./img/logo-git.png" alt="">
 										</div>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -207,14 +185,14 @@
 	
 	<!-- PROJECTS START -->
 	<section id="projects">
-		<div class="container">
-			<div class="main-title">
-				<h2 class="">My Projects</h2>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col-md-auto text-md-center">
-					<div class="card shadow-lg mb-3 p-3 text-white rounded" style="width: 18rem;">
-						<img src="./img/blog.webp" class="card-img-top" alt="...">
+		<div class="container text-center">
+            <div class="main-title custom-main-title">
+                <h2 class="">Projects</h2>
+            </div>
+			<div class="row row-cols-sm-2 row-cols-lg-3 row-cols-1 g-2">
+				<div class="col text-center">
+					<div class="card h-100 p-2 text-white rounded">
+						<img src="./img/blog.webp" class="card-img-top " alt="...">
 						<div class="card-body">
 							<h5 class="card-title">Innocent Drink</h5>
 							<p class="card-text">Fully responsive website for a beverage company.</p>
@@ -239,8 +217,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-auto text-md-center">
-					<div class="card shadow-lg mb-3 p-3 text-white rounded" style="width: 18rem;">
+				<div class="col text-center">
+					<div class="card h-100 p-2 text-white rounded">
 						<img src="./img/time-tracker.png" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">Toggl Time Tracker</h5>
@@ -266,8 +244,8 @@
 						</div>
 					</div>
 				</div>	
-				<div class="col-md-auto text-md-center">
-					<div class="card shadow-lg mb-3 p-3 text-white rounded" style="width: 18rem;">
+				<div class="col text-center">
+					<div class="card h-100 p-2 text-white rounded">
 						<img src="./img/todo.jpeg" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">Simple To-do List</h5>
@@ -291,20 +269,103 @@
 							</div>
 						</div>
 					</div>
-				</div>		
-		</div>			
+				</div>
+                <div class="col text-center">
+					<div class="card h-100 p-2 text-white rounded">
+						<img src="./img/blog.webp" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title">Innocent Drink</h5>
+							<p class="card-text">Fully responsive website for a beverage company.</p>
+							<div class="d-flex flex-row justify-content-center tech">
+								<img src="./img/logo-html5.png" alt="">
+								<img src="./img/logo-css3.png" alt="">
+								<img src="./img/logo-javascript.png" alt="">
+								<img src="./img/logo-bootstrap.png" alt="">
+							</div>
+							<div class="d-flex flex-row justify-content-around">
+								<button class="projects-btn" type="button">
+									<a href="https://www.innocentdrinks.co.uk/blog" class="" target="_blank">
+										<i class="fas fa-link pe-2 ps-2"></i>
+									</a>
+								</button>
+								<button class="projects-btn" type="button">
+									<a href="www.github.com" class="" target="_blank">
+										<i class="fab fa-github"></i>
+									</a>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+                <div class="col text-center">
+					<div class="card h-100 p-2 text-white rounded">
+						<img src="./img/blog.webp" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title">Innocent Drink</h5>
+							<p class="card-text">Fully responsive website for a beverage company.</p>
+							<div class="d-flex flex-row justify-content-center tech">
+								<img src="./img/logo-html5.png" alt="">
+								<img src="./img/logo-css3.png" alt="">
+								<img src="./img/logo-javascript.png" alt="">
+								<img src="./img/logo-bootstrap.png" alt="">
+							</div>
+							<div class="d-flex flex-row justify-content-around">
+								<button class="projects-btn" type="button">
+									<a href="https://www.innocentdrinks.co.uk/blog" class="" target="_blank">
+										<i class="fas fa-link pe-2 ps-2"></i>
+									</a>
+								</button>
+								<button class="projects-btn" type="button">
+									<a href="www.github.com" class="" target="_blank">
+										<i class="fab fa-github"></i>
+									</a>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+                <div class="col text-center">
+					<div class="card h-100 p-2 text-white rounded">
+						<img src="./img/blog.webp" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title">Innocent Drink</h5>
+							<p class="card-text">Fully responsive website for a beverage company.</p>
+							<div class="d-flex flex-row justify-content-center tech">
+								<img src="./img/logo-html5.png" alt="">
+								<img src="./img/logo-css3.png" alt="">
+								<img src="./img/logo-javascript.png" alt="">
+								<img src="./img/logo-bootstrap.png" alt="">
+							</div>
+							<div class="d-flex flex-row justify-content-around">
+								<button class="projects-btn" type="button">
+									<a href="https://www.innocentdrinks.co.uk/blog" class="" target="_blank">
+										<i class="fas fa-link pe-2 ps-2"></i>
+									</a>
+								</button>
+								<button class="projects-btn" type="button">
+									<a href="www.github.com" class="" target="_blank">
+										<i class="fab fa-github"></i>
+									</a>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+            </div>	
+        </div>		
 	</section>
 	<!-- PROJECTS SECTION END -->
+
 	<!-- CONTACT ME SECTION START -->
 	<section id="contacts">
-		<div class="container">
-			<div class="main-title">
-				<h2 class="">Contact me</h2>
+		<div class="container text-center">
+			<div class="main-title custom-main-title">
+				<h2 class="">Contact</h2>
 			</div>
-			<div class="row">
-				<div class="col-md-4 col-sm-12 mb-sm-3">
-					<div class="contact-boxes">
-						<div class="contact-box">
+			<div class="row row-cols-md-2">
+				<div class="col h-100">
+					<div class="contact-box">
+						<div class="contact-boxes">
 							<span class="icon-box">
 								<i class="fa fa-map-marker-alt"></i>
 							</span>
@@ -315,40 +376,37 @@
 							</div>
 						</div>
 
-						<div class="contact-box">
+						<div class="contact-boxes">
 							<span class="icon-box">
 								<i class="fa fa-envelope"></i>
 							</span>
 							<h4 class="title-box">Email</h4>
 							<div class="content-box">
-								<p>Support@example.com</p>
-								<p>Support@example.com</p>
+								<p class="custom-p">anthonykarlo.bantugan@gmail.com</p>				
 							</div>
 						</div>
-
-						<div class="contact-box">
+						<div class="contact-boxes">
 							<span class="icon-box">
 								<i class="fa fa-phone"></i>
 							</span>
-							<h4 class="title-box">Phone</h4>
+							<h4 class="title-box">Skype</h4>
 							<div class="content-box">
-								<p>+1 234 567-8900</p>
 								<p>+1 234 567-8900</p>
 							</div>
 						</div>
-						<div class="contact-box">
+						<div class="contact-boxes">
 							<span class="icon-box">
 								<i class="fa fa-globe"></i>
 							</span>
 							<h4 class="title-box">Website</h4>
-							<div class="content-box">
-								<p>anthonysample.com</p>
+							<div class="content-box">		
+								<a href="https://anthonykarlobantugan.github.io/webportfolio/" class="site-link">Go to Website</a>
 							</div>
 						</div>
 					</div>
 				</div>
 				
-				<div class="col-md-8 col-sm-12">
+				<div class="col h-100">
 					<form action="mail.php" method="post" class="contact-form">
 						<div class="form-group">
 							<input type="text" id="name" name="name" placeholder="Name" required class="form-control">
@@ -371,13 +429,14 @@
 				</div>
 			</div>
 		</div>
+	</section>
 
-		<!-- FOOTER SECTION START -->
-		<footer>
-			<div class="container">
-				<div class="row text-white">
-					<div class="col">
-						<ul class="socials-footer d-flex justify-content-center align-items-center mt-3">
+	<!-- FOOTER SECTION START -->
+	<footer>
+			<div class="container-fluid p-4">
+				<div class="d-flex flex-column flex-md-row justify-content-md-around ">
+					<div class="">
+						<ul class="socials-footer p-0 d-flex justify-content-center align-items-center">
 							<li>
 								<a href="https://www.facebook.com/" target="_blank">
 									<i class="fab fa-facebook"></i>
@@ -405,20 +464,17 @@
 							</li>
 						</ul>
 					</div>
-					<div class="col">
-						<p class="p-width text-center">"Push harder then yesterday if you want a different tomorrow." -Google</p>
-
+					<div class="text-white">
+						<p class="p-width text-center">Disclaimer: Used for educational purposes only</p>
 					</div>
-					<div class="col back-top">
+					<!-- <div class="text-center back-top">
 						<a href="#home">
 							<i class="fas fa-arrow-circle-up"></i>Back to top
 						</a>
-					</div>
+					</div> -->
 				</div>
 			</div>
-		</footer>
-
-
+	</footer>
 
 	<!-- BOOTSTRAP JAVASCRIPT -->
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
